--- a/Thuat toan chuyen doi nhiet do.ipynb
+++ b/Thuat toan chuyen doi nhiet do.ipynb
@@ -69,6 +69,56 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e7d3decb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "#define pen size\n",
+    "turtle.pensize(5) \n",
+    " \n",
+    "#define pen color\n",
+    "turtle.pencolor(\"Blue\") \n",
+    "\n",
+    "#for outer bigger circle\n",
+    "facesize = 200\n",
+    "turtle.penup()\n",
+    "turtle.goto(0, -200)\n",
+    "turtle.pendown()\n",
+    "turtle.circle(facesize)\n",
+    "\n",
+    "#for eyes\n",
+    "#Màu nền mắt là màu đỏ\n",
+    "turtle.fillcolor (\"red\")\n",
+    "turtle.penup()\n",
+    "turtle.goto(-100,50)\n",
+    "turtle.pendown()\n",
+    " \n",
+    "# khai bao bien eyesize lưu kích thước mắt\n",
+    "eye_size = 17.5\n",
+    " \n",
+    "turtle.begin_fill()\n",
+    "turtle.circle(eye_size)\n",
+    "turtle.end_fill()\n",
+    "turtle.penup()\n",
+    " \n",
+    "turtle.goto(100,50)\n",
+    "turtle.pendown()\n",
+    "turtle.begin_fill()\n",
+    "turtle.circle(eye_size)\n",
+    "turtle.end_fill()\n",
+    "\n",
+    "#for nose\n",
+    "turtle.penup ()\n",
+    "turtle.goto(0,50)\n",
+    "turtle.pendown()\n",
+    "turtle.circle(-70, steps=3)\n"
+   ]
   }
  ],
  "metadata": {
