--- a/Buổi 7 - Nhập xuất dữ liệu & chuỗi.ipynb
+++ b/Buổi 7 - Nhập xuất dữ liệu & chuỗi.ipynb
@@ -498,11 +498,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e96b74ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chuoi = \"xin chào!\"\n",
+    "a = chuoi[-1:-3]\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
