--- a/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb
+++ b/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb
@@ -533,7 +533,14 @@
     }
    ],
    "source": [
-    "\n"
+    "\n",
+    "a =input()\n",
+    "b = 0\n",
+    "k = 0\n",
+    "for i in range(10):\n",
+    "\tb += k * a.count(str(k))\n",
+    "\tk += 1\n",
+    "print(b)\n"
    ]
   },
   {
@@ -595,7 +602,17 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a=input(\"Nhập chuỗi a: \")\n",
+    "a=\" \"+a\n",
+    "kq=True\n",
+    "for i in range(len(a)):\n",
+    "    k=a.find(\" \")+1\n",
+    "    kq=kq and not a[k].islower()\n",
+    "print(kq)\n",
+    "if kq==False:\n",
+    "    print(a.title())"
+   ]
   },
   {
    "cell_type": "markdown",
