--- a/Buổi 7 - Nhập xuất dữ liệu & chuỗi.ipynb
+++ b/Buổi 7 - Nhập xuất dữ liệu & chuỗi.ipynb
@@ -477,6 +477,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "55af738d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chào!\n"
+     ]
+    }
+   ],
+   "source": [
+    "chuoi = \"xin chào!\"\n",
+    "a = chuoi[4:len(chuoi)]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "389eb7cc",
    "metadata": {},
@@ -498,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e96b74ef",
    "metadata": {},
    "outputs": [
