--- a/bai tap chuyen doi nhiet do.ipynb
+++ b/bai tap chuyen doi nhiet do.ipynb
@@ -20,6 +20,26 @@
     "f = (9*c/5)+32\n",
     "print(\"độ F là  \",f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c186e00c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"jksgjgfjg\"\n",
+    "b = a[1]\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
