--- a/BAI TAP LEARN.ipynb
+++ b/BAI TAP LEARN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85b1c224",
+   "id": "9e68a1f4",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1da6f84d",
+   "id": "aa72e1f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd971c96",
+   "id": "1a0103b8",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6eae03b4",
+   "id": "f24ccb3e",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "decad369",
+   "id": "d5c394a9",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "17680289",
+   "id": "5d89d5aa",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c68868d",
+   "id": "aac44401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +200,75 @@
     "else:\n",
     "    print(\"gày cấp độ III\")\n",
     "print(BMI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6ed26bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập độ dài các cạnh của hình vuông: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import turtle\n",
+    "a = int(input(\"Nhập độ dài các cạnh của hình vuông: \"))\n",
+    "t = turtle.Turtle()\n",
+    "t.hideturtle()\n",
+    "t.pencolor(\"red\")\n",
+    "edge = 0\n",
+    "while edge < 4:\n",
+    "    # Vẽ 1 cạnh của hình vuông\n",
+    "    t.forward(a)\n",
+    "    t.right(90)\n",
+    "    # Câu lệnh này đặt trong vòng lặp while\n",
+    "    # số lần lặp là 4, nên được hình vuông yêu cầu\n",
+    "    edge += 1\n",
+    "turtle.done()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "54b0db26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nhập vào khoảng cách: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "d = int(input(\"nhập vào khoảng cách: \"))\n",
+    "r = 30\n",
+    "t.pu()\n",
+    "t.lt(90)\n",
+    "t.pd()\n",
+    "while r < d:\n",
+    "    t.circle(r,(360-180))\n",
+    "    r = r + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9ec05498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
    ]
   }
  ],
