--- a/BAI TAP LEARN.ipynb
+++ b/BAI TAP LEARN.ipynb
@@ -262,13 +262,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9ec05498",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#[Bài tập] Vẽ hình theo mẫu\n",
     "\n",
-    "    "
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "r = 100\n",
+    "b = 0\n",
+    "while b < 2:\n",
+    "    t.circle(r,90)\n",
+    "    t.circle(r/2,90)\n",
+    "    b += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5303462f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.bgcolor(\"black\")\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "t.speed(0)\n",
+    "t.pensize(2)\n",
+    "t.hideturtle()\n",
+    "b = 0\n",
+    "color = [\"green\", \"white\", \"yellow\", \"red\", \"magenta\", \"blue\", \"cyan\"]\n",
+    "\n",
+    "a = 36 # Số vòng tròn\n",
+    "r = 100\n",
+    "\n",
+    "for i in range (a):\n",
+    "    t.pencolor(color[i%7])\n",
+    "    while b < 2:\n",
+    "        t.circle(r,90)\n",
+    "        t.circle(r/2,90)\n",
+    "        b += 1\n",
+    "    t.left(360/a)\n"
    ]
   }
  ],
