--- a/Buoi 12 - Thực tập vòng lặp while.ipynb
+++ b/Buoi 12 - Thực tập vòng lặp while.ipynb
@@ -14,7 +14,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "4bef922c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"adcbadc\"\n",
+    "b = \"adc\"\n",
+    "kq = 0\n",
+    "while a.find(b) != -1:\n",
+    "    if a.find(b) != -1:\n",
+    "        kq += 1\n",
+    "        a = a[a.find(b):]\n",
+    "print(kq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "26dc9e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"adcbadc\"\n",
+    "b = \"adc\"\n",
+    "kq = 0\n",
+    "a.find(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "8cb73965",
    "metadata": {},
    "outputs": [
@@ -22,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nhập vào a8\n",
-      "a không phải là số nguyên tố\n"
+      "nhập vào a2\n",
+      "a là số nguyên tố\n"
      ]
     }
    ],
