--- a/Buổi 17 - Thực hành hàm 2.ipynb
+++ b/Buổi 17 - Thực hành hàm 2.ipynb
@@ -84,7 +84,7 @@
     "                elif kqtam != '':\n",
     "                    kq +=kqtam+\",\"\n",
     "                    kqtam = ''\n",
-    "            print(kq)\n",
+    "            print(kq[:-1])\n",
     "        so(a)\n",
     " \n",
     "    elif b == \"3\":\n",
@@ -92,12 +92,32 @@
     "            kq = ''\n",
     "            for i in a:\n",
     "                if not (i.isalpha() or i.isdigit()):\n",
-    "                    kq +=i\n",
-    "            print(kq)\n",
-    "        kytu(a)\n",
+    "                    kq +=i + ' '\n",
+    "            print(kq[:-1])\n",
+    "        kytu(a[:-1])\n",
     "   \n",
     "    b = input(\"chọn chạy hàm 1, hoặc hàm 2 hoặc hàm 3 bằng cách nhập vào 1 hoặc 2 hoặc 3 tương ứng \")  \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23714765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while true:\n",
+    "    func = input(\"nhập 1, 2, 3\")\n",
+    "    if func == \"0\":\n",
+    "        break\n",
+    "    if func == \"1\":\n",
+    "        print(chuoi(a))\n",
+    "    elif func == \"2\":\n",
+    "        print(so(a))\n",
+    "    elif func == \"3\":\n",
+    "        print(kytu(a))\n",
+    "print()"
    ]
   },
   {
@@ -131,11 +151,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "86aa11e7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nhập vào số nguyên dương không quá 75 chữ số: 54632\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"nhập vào số nguyên dương không quá 75 chữ số: \")\n",
+    "b = 1\n",
+    "k = a[0]\n",
+    "c = a[b]\n",
+    "for i in a:\n",
+    "    if (int(i) > int(c)):\n",
+    "        k = c\n",
+    "    if b < (int(len(a)-1)):\n",
+    "        b +=1\n",
+    "        c = a[b]\n",
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40138909",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def kiemtrasodondieu(a):\n",
+    "    a = str(a)\n",
+    "    if len(a)==1:\n",
+    "        return True\n",
+    "    if a[0]>a[1]:\n",
+    "        t = -1\n",
+    "    elif a[0]<a[1]:\n",
+    "        t = 1\n",
+    "    else:\n",
+    "        return False\n",
+    "    for i in range(1, len(a)-1):\n",
+    "        if int(a[i])*t>int(a[i+1])*t:\n",
+    "            t *= -1\n",
+    "        else:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def demsdd(a):\n",
+    "    a = str(a)\n",
+    "    for i in range(len(a), 0, -1):\n",
+    "        if kiemtrasodondieu(a[:i]):\n",
+    "            return i\n",
+    "    return 0\n",
+    "\n",
+    "a = int(input(\"Nhập vào số nguyên dương: \"))\n",
+    "while a<=0:\n",
+    "    a = int(input(\"Nhập lại: \"))\n",
+    "    \n",
+    "print(demsdd(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "145ba8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nhập vào n 37489\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sodondieu(s):\n",
+    "    s = str(s)\n",
+    "    if s[0] == s[1]:\n",
+    "        return 1\n",
+    "    count = 2\n",
+    "    for i in range(len(s)-2):\n",
+    "        if (int(s[i])-int(s[i+1])*(int(s[i+1])-int(s[i+2])))<0: #hiệu số liên tiếp âm thì đơn điệu\n",
+    "            count +=1 #đơn điệu thì + thêm 1\n",
+    "        else:\n",
+    "            break # ko đơn điệu thì break\n",
+    "    return count\n",
+    "s = int(input(\"nhập vào n \"))\n",
+    "print(sodondieu(s))"
+   ]
   }
  ],
  "metadata": {
