--- a/BAI TAP LEARN.ipynb
+++ b/BAI TAP LEARN.ipynb
@@ -281,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5303462f",
+   "execution_count": 1,
+   "id": "87b25d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,82 @@
     "        t.circle(r,90)\n",
     "        t.circle(r/2,90)\n",
     "        b += 1\n",
-    "    t.left(360/a)\n"
+    "    t.left(360/a)\n",
+    "    b = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f953d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "wn = turtle.Screen()\n",
+    "wn.bgcolor(\"black\")\n",
+    "wn.title(\"Star\")\n",
+    "\n",
+    "myPen = turtle.Turtle()\n",
+    "myPen.color(\"#FF0000\")\n",
+    "\n",
+    "for j in range (1):\n",
+    "    for i in range (1,6):\n",
+    "        myPen.left(144)\n",
+    "        myPen.forward(200)\n",
+    "    myPen.left(5)\n",
+    "\n",
+    "turtle.done()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ea9060e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "char = input('Your char?: ')\n",
+    "width = int(input('Width?: '))\n",
+    "height = int(input('Height?: '))\n",
+    "\n",
+    "for i in range(1,height + 1):\n",
+    "    print_str = ''\n",
+    "    for j in range(1,width + 1):\n",
+    "        if i == 1 or i == height:\n",
+    "            print_str += char\n",
+    "        else:\n",
+    "            if j == 1 or j == width:\n",
+    "                print_str += char\n",
+    "            else:\n",
+    "                print_str += ' '\n",
+    "    print(print_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4dff17f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#[Bài tập] Fizz Buzz (Python)\n",
+    "a = int(input(\"nhập vào a: \"))\n",
+    "b = int(input(\"nhập vào b: \"))\n",
+    "if a >= b:\n",
+    "    print(\"b phải > a, bạn nhập lại b nhé \")\n",
+    "    b = int(input(\"nhập vào b: \"))\n",
+    "else:\n",
+    "    for i in range(a,b+1):\n",
+    "        if i%3 == 0:\n",
+    "            print(\"Fizz\")\n",
+    "        elif i%5 == 0:\n",
+    "            print(\"Buzz\")\n",
+    "        elif i%3 ==0 and i%5 == 0:\n",
+    "            print(\"FizzBuzz\")\n",
+    "        \n",
+    "            "
    ]
   }
  ],
