--- a/Buoi 5 - Biến và kiểu dữ liệu.ipynb
+++ b/Buoi 5 - Biến và kiểu dữ liệu.ipynb
@@ -119,6 +119,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8430f30e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cdb6ba05",
    "metadata": {},
