--- a/BAI TAP LEARN.ipynb
+++ b/BAI TAP LEARN.ipynb
@@ -362,10 +362,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f4dff17f",
+   "execution_count": 1,
+   "id": "49750a31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nhập vào a: 3\n",
+      "nhập vào b: 15\n",
+      "Fizz\n",
+      "4\n",
+      "Buzz\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "Buzz\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "Fizz\n"
+     ]
+    }
+   ],
    "source": [
     "#[Bài tập] Fizz Buzz (Python)\n",
     "a = int(input(\"nhập vào a: \"))\n",
@@ -381,8 +403,66 @@
     "            print(\"Buzz\")\n",
     "        elif i%3 ==0 and i%5 == 0:\n",
     "            print(\"FizzBuzz\")\n",
-    "        \n",
+    "        else:\n",
+    "            print(i)\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "98d6312f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "nhập vào 1 giá trị1\n",
+      "1\n",
+      "2\n",
+      "nhập vào 1 giá trị2\n",
+      "4\n",
+      "7\n",
+      "nhập vào 1 giá trị3\n",
+      "10\n",
+      "11\n",
+      "nhập vào 1 giá trị4\n",
+      "15\n",
+      "16\n",
+      "nhập vào 1 giá trị5\n",
+      "21\n",
+      "22 bạn đã thắng\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "playchoice = \"\"\n",
+    "computerchoice = ''\n",
+    "r = \"\"\n",
+    "s = 0\n",
+    "r = random.randint(0,1)\n",
+    "while True:\n",
+    "    if r == 0:\n",
+    "        print(s)\n",
+    "        playchoice = input(\"nhập vào 1 giá trị\")\n",
+    "        s = s + int(playchoice)\n",
+    "        if s > 21:\n",
+    "            print(s,\"bạn đã thua\")\n",
+    "            break\n",
+    "        else:\n",
+    "            r = 1\n",
+    "    if r == 1:\n",
+    "        print(s)\n",
+    "        computerchoice = random.randint(1,3)\n",
+    "        s = s + int(computerchoice)\n",
+    "        if s > 21:\n",
+    "            print(s,\"bạn đã thắng\")\n",
+    "            break\n",
+    "        else:\n",
+    "            r = 0"
    ]
   }
  ],
