--- a/BAI TAP LEARN.ipynb
+++ b/BAI TAP LEARN.ipynb
@@ -464,6 +464,20 @@
     "        else:\n",
     "            r = 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "817b76c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#[Bài tập] Sinh bảng cửu chương (Python)\n",
+    "\n",
+    "for i in range(1,11):\n",
+    "    for j in range(1,11):\n",
+    "        print(i,\"*\",)"
+   ]
   }
  ],
  "metadata": {
