--- a/Buổi 25 - Thực hành lớp và đối tượng 2.ipynb
+++ b/Buổi 25 - Thực hành lớp và đối tượng 2.ipynb
@@ -77,7 +77,22 @@
    "id": "d12b38b9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def tinhtb(L):\n",
+    "    return sum(L)/len(L)\n",
+    "\n",
+    "def main():\n",
+    "    for dodai in range(len(L),0,-1):\n",
+    "        for i in range(len(L) - dodai + 1):\n",
+    "            ## nếu công thức ra 1 ~~> range(1) ~~> chạy mỗi số 0\n",
+    "            ## nếu công thức ra 2 ~~> range(2) ~~> chạy 0, 1\n",
+    "            L_cut = L[i:i+dodai]\n",
+    "            if tinhtb(L_cut) == K:\n",
+    "                return i,dodai\n",
+    "    return -1\n",
+    "\n",
+    "main()"
+   ]
   },
   {
    "cell_type": "markdown",
