--- a/Bài tập thêm về List.ipynb
+++ b/Bài tập thêm về List.ipynb
@@ -222,8 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1572fb15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f86f3b07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -242,7 +258,35 @@
    "id": "33f9e4a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dem(L):\n",
+    "    m = None\n",
+    "    count = 0\n",
+    "    for i in L:\n",
+    "        if m == None and or i > m:\n",
+    "            count += 1\n",
+    "            m = 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f9d0b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dem1(L):\n",
+    "    count = 0\n",
+    "    tmp = L[0]\n",
+    "    for i in range(1,len(L)):\n",
+    "        if tmp < L[i]:\n",
+    "            count += 1\n",
+    "            tmp = L[i]\n",
+    "    return count\n",
+    "L = [6,8,6,5,6,10,11]\n",
+    "print(dem1(L))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,11 +298,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d91a0d7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 12, 15, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fusionlist(L,K):\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    L_kq = []\n",
+    "    while True:\n",
+    "        if i == len(L) and j == len(K): return L_kq\n",
+    "        if i == len(L) or L[i] > K[j]:\n",
+    "            L_kq.append(K[j])\n",
+    "            j += 1\n",
+    "        else:\n",
+    "            L_kq.append(L[i])\n",
+    "            i += 1\n",
+    "    \n",
+    "L = [1,2,3,5,7]\n",
+    "K = [4,6,8,12,15,18]\n",
+    "print(fusionlist(L,K)) #nếu đổi vị trí k và l thì điều kiện sai dong t7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ddcc84a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 12, 15, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fusionlist(L,K):\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    L_kq = []\n",
+    "    while True:\n",
+    "        if i == len(L) and j == len(K): return L_kq\n",
+    "        if i == len(L) or (j < len(K) and L[i] > K[j]):\n",
+    "            L_kq.append(K[j])\n",
+    "            j += 1\n",
+    "        else:\n",
+    "            L_kq.append(L[i])\n",
+    "            i += 1\n",
+    "    \n",
+    "L = [1,2,3,5,7]\n",
+    "K = [4,6,8,12,15,18]\n",
+    "print(fusionlist(K,L))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -274,7 +376,21 @@
    "id": "2595ba23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def check(L):\n",
+    "    L1 = []\n",
+    "    L2 = []\n",
+    "    L3 = []\n",
+    "    for i in L:\n",
+    "        if i%2 == 0:\n",
+    "            L1.append(i)\n",
+    "        elif i%2 !=0:\n",
+    "            L2.append(i)\n",
+    "        else:\n",
+    "            L3.append(i)\n",
+    "    L = L1 + L3 + L2\n",
+    "    return L"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,11 +402,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2015e143",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 12, 15, 27, 1, 2, 5, 19]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sap_xep(K):\n",
+    "    L = []\n",
+    "    for i in K:\n",
+    "        if i%3 == 0:\n",
+    "            L.append(i)\n",
+    "    for i in K:\n",
+    "        if i not in L:\n",
+    "            L.append(i)\n",
+    "    return L\n",
+    "K = [1,2,3,5,6,9,12,15,19,27]\n",
+    "sap_xep(K)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -306,7 +445,20 @@
    "id": "99109b77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def inL(L):\n",
+    "    L_chan = []\n",
+    "    L_le = []\n",
+    "    for i in L:\n",
+    "        if i % 2 == 0:\n",
+    "            L_chan.append(i)\n",
+    "        else:\n",
+    "            L_le.append(i)\n",
+    "    print(L_chan)\n",
+    "    print(L_le)\n",
+    "    \n",
+    "inL([1, 2, 3, 4, 5,0,0, 6, 7, 8, 12, 15, 18])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,11 +470,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "62eefa1a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 18, 0, 6, 7, 8, 12, 15, 0]\n",
+      "[1, 2, 3, 4, 5, 18, 15, 6, 7, 8, 12, 0, 0]\n",
+      "[12, 2, 3, 4, 5, 18, 15, 6, 7, 8, 1, 0, 0]\n",
+      "[12, 8, 3, 4, 5, 18, 15, 6, 7, 2, 1, 0, 0]\n",
+      "[12, 8, 7, 4, 5, 18, 15, 6, 3, 2, 1, 0, 0]\n",
+      "[12, 8, 7, 6, 5, 18, 15, 4, 3, 2, 1, 0, 0]\n",
+      "[12, 8, 7, 6, 5, 18, 15, 4, 3, 2, 1, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### đổi chỗ trị lớn nhất và giá trị nhỏ nhất\n",
+    "### đổi chỗ trị lớn nhì và giá trị nhỏ nhì\n",
+    "### đổi chỗ trị lớn ba và giá trị nhỏ ba\n",
+    "### đổi chỗ trị lớn tư và giá trị nhỏ tư\n",
+    "\n",
+    "def timmaxmin(L):\n",
+    "    ### trả về trị của max và min, trong list sẽ có những giá trị None\n",
+    "    ma = None\n",
+    "    mi = None\n",
+    "    for i in range(len(L)):\n",
+    "        if L[i] != None:\n",
+    "            if ma == None or L[i] > L[ma]:\n",
+    "                ma = i\n",
+    "            if mi == None or L[i] < L[mi]:\n",
+    "                mi = i\n",
+    "    return ma,mi\n",
+    "\n",
+    "def sapxepmaxmin(L):\n",
+    "    L = L.copy()\n",
+    "    L_kq = L.copy()\n",
+    "    while True:\n",
+    "        ma,mi = timmaxmin(L)\n",
+    "        if ma == mi: return L_kq\n",
+    "        L[ma] = L[mi] = None\n",
+    "        L_kq[ma],L_kq[mi] = L_kq[mi],L_kq[ma]\n",
+    "        print(L_kq)\n",
+    "        \n",
+    "print(sapxepmaxmin([1, 2, 3, 4, 5,0,0, 6, 7, 8, 12, 15, 18]))\n",
+    "    \n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
