--- a/Buổi 27 - Thư viện Tkinter 2.ipynb
+++ b/Buổi 27 - Thư viện Tkinter 2.ipynb
@@ -31,7 +31,12 @@
    "id": "7d24275d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import *\n",
+    "sc = tk\n",
+    "\n",
+    "sc.mainloop()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,11 +48,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3f688c39",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "sc = Tk()\n",
+    "\n",
+    "sc.title(\"Calculator\")\n",
+    "\n",
+    "noidung_et_kq = StringVar() ## kiểu đối tượng chuỗi\n",
+    "## noidung_et_kq = \"hello\" ## ~~> đây là cách làm sai\n",
+    "## noidung_et_kq.set(\"hello\")\n",
+    "## if noidung_et_kq == \"hi\" ## ~~> sai\n",
+    "## if noidung_kt_kq.get() == \"hi\"\n",
+    "    \n",
+    "def nhan_nut_0():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"0\")\n",
+    "\n",
+    "def nhan_nut_1():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"1\")\n",
+    "\n",
+    "def nhan_nut_2():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"2\")\n",
+    "\n",
+    "def nhan_nut_3():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"3\")\n",
+    "\n",
+    "def nhan_nut_4():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"4\")\n",
+    "\n",
+    "def nhan_nut_5():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"5\")\n",
+    "\n",
+    "def nhan_nut_6():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"6\")\n",
+    "\n",
+    "def nhan_nut_7():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"7\")\n",
+    "\n",
+    "def nhan_nut_8():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"8\")\n",
+    "\n",
+    "def nhan_nut_9():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"9\")\n",
+    "        \n",
+    "def nhan_nut_mongoac():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"(\")\n",
+    "        \n",
+    "def nhan_nut_dongngoac():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \")\")\n",
+    "    \n",
+    "def nhan_nut_cham():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \".\")\n",
+    "    \n",
+    "def nhan_nut_cong():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"+\")\n",
+    "    \n",
+    "def nhan_nut_tru():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"-\")\n",
+    "    \n",
+    "def nhan_nut_nhan():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"*\")\n",
+    "\n",
+    "def nhan_nut_chia():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get() + \"/\")\n",
+    "    \n",
+    "def nhan_nut_MR():\n",
+    "    noidung_et_kq.set(\"\")\n",
+    "    \n",
+    "def nhan_nut_DEL():\n",
+    "    noidung_et_kq.set(noidung_et_kq.get()[:-1])\n",
+    "    \n",
+    "def nhan_nut_bang():\n",
+    "    result = eval(noidung_et_kq.get())\n",
+    "    noidung_et_kq.set(result)\n",
+    "\n",
+    "et_kq = Entry(sc,font = (\"Arial\",22),textvariable = noidung_et_kq)\n",
+    "et_kq.grid(column = 1, row = 1, columnspan = 4, sticky = \"we\")\n",
+    "\n",
+    "bt_MR = Button(sc,text = \"MR\", width = 7, font = (\"Arial\",17), command = nhan_nut_MR)\n",
+    "bt_DEL = Button(sc,text = \"DEL\", width = 7, font = (\"Arial\",17), command = nhan_nut_DEL)\n",
+    "bt_mongoac = Button(sc,text = \"(\", width = 7, font = (\"Arial\",17), command = nhan_nut_mongoac)\n",
+    "bt_dongngoac = Button(sc,text = \")\", width = 7, font = (\"Arial\",17), command = nhan_nut_dongngoac)\n",
+    "\n",
+    "bt_1 = Button(sc,text = \"1\", width = 7, font = (\"Arial\",17), command = nhan_nut_1)\n",
+    "bt_2 = Button(sc,text = \"2\", width = 7, font = (\"Arial\",17), command = nhan_nut_2)\n",
+    "bt_3 = Button(sc,text = \"3\", width = 7, font = (\"Arial\",17), command = nhan_nut_3)\n",
+    "bt_cong = Button(sc,text = \"+\", width = 7, font = (\"Arial\",17), command = nhan_nut_cong)\n",
+    "\n",
+    "bt_4 = Button(sc,text = \"4\", width = 7, font = (\"Arial\",17), command = nhan_nut_4)\n",
+    "bt_5 = Button(sc,text = \"5\", width = 7, font = (\"Arial\",17), command = nhan_nut_5)\n",
+    "bt_6 = Button(sc,text = \"6\", width = 7, font = (\"Arial\",17), command = nhan_nut_6)\n",
+    "bt_tru = Button(sc,text = \"-\", width = 7, font = (\"Arial\",17), command = nhan_nut_tru)\n",
+    "\n",
+    "bt_7 = Button(sc,text = \"7\", width = 7, font = (\"Arial\",17), command = nhan_nut_7)\n",
+    "bt_8 = Button(sc,text = \"8\", width = 7, font = (\"Arial\",17), command = nhan_nut_8)\n",
+    "bt_9 = Button(sc,text = \"9\", width = 7, font = (\"Arial\",17), command = nhan_nut_9)\n",
+    "bt_nhan = Button(sc,text = \"*\", width = 7, font = (\"Arial\",17), command = nhan_nut_nhan)\n",
+    "\n",
+    "bt_cham = Button(sc,text = \".\", width = 7, font = (\"Arial\",17), command = nhan_nut_cham)\n",
+    "bt_0 = Button(sc,text = \"0\", width = 7, font = (\"Arial\",17), command = nhan_nut_0)\n",
+    "bt_bang = Button(sc,text = \"=\", width = 7, font = (\"Arial\",17), command = nhan_nut_bang)\n",
+    "bt_chia = Button(sc,text = \"/\", width = 7, font = (\"Arial\",17), command = nhan_nut_chia)\n",
+    "\n",
+    "bt_MR.grid(column = 1, row = 2)\n",
+    "bt_DEL.grid(column = 2, row = 2)\n",
+    "bt_mongoac.grid(column = 3, row = 2)\n",
+    "bt_dongngoac.grid(column = 4, row = 2)\n",
+    "\n",
+    "bt_1.grid(column = 1, row = 3)\n",
+    "bt_2.grid(column = 2, row = 3)\n",
+    "bt_3.grid(column = 3, row = 3)\n",
+    "bt_cong.grid(column = 4, row = 3)\n",
+    "\n",
+    "bt_4.grid(column = 1, row = 4)\n",
+    "bt_5.grid(column = 2, row = 4)\n",
+    "bt_6.grid(column = 3, row = 4)\n",
+    "bt_tru.grid(column = 4, row = 4)\n",
+    "\n",
+    "bt_7.grid(column = 1, row = 5)\n",
+    "bt_8.grid(column = 2, row = 5)\n",
+    "bt_9.grid(column = 3, row = 5)\n",
+    "bt_nhan.grid(column = 4, row = 5)\n",
+    "\n",
+    "bt_cham.grid(column = 1, row = 6)\n",
+    "bt_0.grid(column = 2, row = 6)\n",
+    "bt_bang.grid(column = 3, row = 6)\n",
+    "bt_chia.grid(column = 4, row = 6)\n",
+    "\n",
+    "sc.mainloop()\n"
+   ]
   }
  ],
  "metadata": {
