--- a/bai tap chuyen doi nhiet do.ipynb
+++ b/bai tap chuyen doi nhiet do.ipynb
@@ -40,6 +40,27 @@
     "b = a[1]\n",
     "print(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b2d363ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-08-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from datetime import date\n",
+    "today = date.today()\n",
+    "print(today)"
+   ]
   }
  ],
  "metadata": {
