--- a/Buổi 26 - Thư viện Tkinter - Finished.ipynb
+++ b/Buổi 26 - Thư viện Tkinter - Finished.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "8f061788",
    "metadata": {},
    "outputs": [
@@ -270,8 +270,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23 \n",
-      "23 23\n"
+      "22 22\n"
      ]
     }
    ],
@@ -474,7 +473,142 @@
    "id": "df9b6ab3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "sc = Tk()\n",
+    "\n",
+    "## nếu như user mình nhập vào là \"admin\" và password nhập vào là \"123abc\"\n",
+    "## thì label thông báo hiển thị đăng nhập thành công với chữ màu xanh\n",
+    "## ngược lại\n",
+    "## thì label thông báo hiển thị đăng nhập thất bại với chữ màu đỏ\n",
+    "\n",
+    "def click_login():\n",
+    "    f = open(\"userdata.txt\",\"r\")\n",
+    "    data = f.readlines() ## data là một list\n",
+    "    L_user = []\n",
+    "    L_pass = []\n",
+    "    for i in range(len(data)):\n",
+    "        if i % 2 == 0: \n",
+    "            L_user.append(data[i].strip())\n",
+    "        else:\n",
+    "            L_pass.append(data[i].strip())\n",
+    "    if noidung_et1.get() in L_user:\n",
+    "        vt = L_user.index(noidung_et1.get())\n",
+    "        if L_pass[vt] == noidung_et2.get():\n",
+    "            lb4.config(text = \"Đăng nhập thành công\", fg = \"green\")\n",
+    "        else:\n",
+    "            lb4.config(text = \"Sai tên tài khoản hoặc mật khẩu\", fg = \"red\")\n",
+    "    else:\n",
+    "        lb4.config(text = \"Tên đăng nhập chưa được đăng ký\")\n",
+    "        \n",
+    "def click_su_signup():\n",
+    "    ## thứ 1, tên đăng nhập chưa được đăng ký\n",
+    "    ## thứ 2, 2 mật khẩu phải giống nhau\n",
+    "    f = open(\"userdata.txt\",\"r\")\n",
+    "    data = f.readlines() ## data là một list\n",
+    "    L_user = []\n",
+    "    L_pass = []\n",
+    "    for i in range(len(data)):\n",
+    "        if i % 2 == 0: \n",
+    "            L_user.append(data[i].strip())\n",
+    "        else:\n",
+    "            L_pass.append(data[i].strip())\n",
+    "    if noidung_et_su1.get() == \"\" or noidung_et_su2.get() == \"\" or noidung_et_su3.get() == \"\":\n",
+    "        lb_su5.config(text = \"Vui lòng nhập đầy đủ thông tin\",fg = \"red\")\n",
+    "    elif noidung_et_su1.get() in L_user:\n",
+    "        lb_su5.config(text = \"Tên đăng nhập đã tồn tại\",fg = \"red\")\n",
+    "    else:\n",
+    "        if noidung_et_su2.get() != noidung_et_su3.get():\n",
+    "            lb_su5.config(text = \"Hai mật khẩu không trùng nhau\",fg = \"red\")\n",
+    "        else:\n",
+    "            f = open(\"userdata.txt\",\"a\")\n",
+    "            f.write(noidung_et_su1.get() + \"\\n\" + noidung_et_su2.get() + \"\\n\")\n",
+    "            f.close()\n",
+    "            lb_su5.config(text = \"Tạo tài khoản thành công\",fg = \"green\")\n",
+    "            noidung_et_su1.set(\"\")\n",
+    "            noidung_et_su2.set(\"\")\n",
+    "            noidung_et_su3.set(\"\")\n",
+    "        \n",
+    "def click_signup():\n",
+    "    manhinh_login.grid_forget()\n",
+    "    manhinh_signup.grid(column = 1, row = 1)\n",
+    "    \n",
+    "def click_su_login():\n",
+    "    manhinh_signup.grid_forget()\n",
+    "    manhinh_login.grid(column = 1, row = 1)\n",
+    "\n",
+    "noidung_et1 = StringVar()\n",
+    "noidung_et2 = StringVar()\n",
+    "\n",
+    "manhinh_login = Frame(sc)\n",
+    "manhinh_login.grid(column = 1, row = 1)\n",
+    "\n",
+    "### khởi tạo màn hình login\n",
+    "lb1 = Label(manhinh_login,text = \"Please enter email and password to login\",font = (\"Arial\",15))\n",
+    "lb2 = Label(manhinh_login,text = \"Username\",font = (\"Arial\",15))\n",
+    "lb3 = Label(manhinh_login,text = \"Password\",font = (\"Arial\",15))\n",
+    "lb4 = Label(manhinh_login,font = (\"Arial\",15))\n",
+    "\n",
+    "et1 = Entry(manhinh_login,font = (\"Arial\",15), textvariable = noidung_et1)\n",
+    "et2 = Entry(manhinh_login,font = (\"Arial\",15),show = \"*\", textvariable = noidung_et2)\n",
+    "\n",
+    "bt1 = Button(manhinh_login,text = \"Login\",font = (\"Arial\",15), command = click_login, width = 10)\n",
+    "bt2 = Button(manhinh_login,text = \"Sign up\",font = (\"Arial\",15), command = click_signup, width = 10)\n",
+    "\n",
+    "lb1.grid(column = 1, row = 1,columnspan = 2, pady = (10,10), padx = (10,10))\n",
+    "lb2.grid(column = 1, row = 2)\n",
+    "lb3.grid(column = 1, row = 3)\n",
+    "\n",
+    "et1.grid(column = 2, row = 2)\n",
+    "et2.grid(column = 2, row = 3)\n",
+    "\n",
+    "bt1.grid(column = 1, row = 4,columnspan = 2,pady = (10,0))\n",
+    "bt2.grid(column = 1, row = 5,columnspan = 2,pady = (0,10))\n",
+    "\n",
+    "lb4.grid(column = 1, row = 6,columnspan = 2)\n",
+    "### kết thúc khởi tạo màn hình login\n",
+    "\n",
+    "### khởi tạo màn hình đăng ký\n",
+    "\n",
+    "manhinh_signup = Frame(sc)\n",
+    "# manhinh_signup.grid(column = 1, row = 1)\n",
+    "\n",
+    "noidung_et_su1 = StringVar()\n",
+    "noidung_et_su2 = StringVar()\n",
+    "noidung_et_su3 = StringVar()\n",
+    "\n",
+    "lb_su1 = Label(manhinh_signup,text = \"Please enter email and password to Sign up\",font = (\"Arial\",15))\n",
+    "lb_su2 = Label(manhinh_signup,text = \"Username\",font = (\"Arial\",15))\n",
+    "lb_su3 = Label(manhinh_signup,text = \"Password\",font = (\"Arial\",15))\n",
+    "lb_su4 = Label(manhinh_signup,text = \"Confirm password\",font = (\"Arial\",15))\n",
+    "lb_su5 = Label(manhinh_signup,font = (\"Arial\",15))\n",
+    "\n",
+    "et_su1 = Entry(manhinh_signup,font = (\"Arial\",15), textvariable = noidung_et_su1)\n",
+    "et_su2 = Entry(manhinh_signup,font = (\"Arial\",15),show = \"*\", textvariable = noidung_et_su2)\n",
+    "et_su3 = Entry(manhinh_signup,font = (\"Arial\",15),show = \"*\", textvariable = noidung_et_su3)\n",
+    "\n",
+    "bt_su1 = Button(manhinh_signup,text = \"Sign up\",font = (\"Arial\",15), command = click_su_signup, width = 10)\n",
+    "bt_su2 = Button(manhinh_signup,text = \"Login\",font = (\"Arial\",15), command = click_su_login, width = 10)\n",
+    "\n",
+    "lb_su1.grid(column = 1, row = 1,columnspan = 2, pady = (10,10), padx = (10,10))\n",
+    "lb_su2.grid(column = 1, row = 2)\n",
+    "lb_su3.grid(column = 1, row = 3)\n",
+    "lb_su4.grid(column = 1, row = 4)\n",
+    "\n",
+    "et_su1.grid(column = 2, row = 2)\n",
+    "et_su2.grid(column = 2, row = 3)\n",
+    "et_su3.grid(column = 2, row = 4)\n",
+    "\n",
+    "bt_su1.grid(column = 1, row = 5,columnspan = 2,pady = (10,0))\n",
+    "bt_su2.grid(column = 1, row = 6,columnspan = 2,pady = (0,10))\n",
+    "\n",
+    "lb_su5.grid(column = 1, row = 7,columnspan = 2)\n",
+    "\n",
+    "### kết thúc khởi tạo màn hình đăng ký\n",
+    "\n",
+    "sc.mainloop()"
+   ]
   }
  ],
  "metadata": {
