--- a/BAI TAP LEARN.ipynb
+++ b/BAI TAP LEARN.ipynb
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf253406",
+   "id": "ecb79987",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2442084a",
+   "id": "404cc7ea",
    "metadata": {},
    "outputs": [
     {
@@ -884,6 +884,32 @@
     "L.sort(reverse = True)\n",
     "print(\"số lớn nhất là\", L[0])\n",
     "print(\"số lớn nhì là\", L[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3974b602",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10=50\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuples = (10, 20, 30, 0)\n",
+    "\n",
+    "(a, *b, c) = tuples\n",
+    "\n",
+    "a = a + c\n",
+    "\n",
+    "c = b[0] + b[1]\n",
+    "\n",
+    "print(a, c, sep=\"=\")"
    ]
   }
  ],
