--- a/BAI TAP LEARN.ipynb
+++ b/BAI TAP LEARN.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "87dce65f",
    "metadata": {},
    "outputs": [
@@ -896,20 +896,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10=50\n"
+      "nhập từ cần kiểm tra it\n",
+      "từ bạn nhập không có trong từ điển\n"
      ]
     }
    ],
    "source": [
-    "tuples = (10, 20, 30, 0)\n",
+    "#[Bài tập] Từ điển (Python)\n",
+    "Dic = {\"hello\": \"xin chào\", \"i\": \"tôi\", \"you\": \"bạn\",\"she\": \"cô ấy\",\"he\": \"anh ấy\"}\n",
+    "input_word = input(\"nhập từ cần kiểm tra \")\n",
     "\n",
-    "(a, *b, c) = tuples\n",
-    "\n",
-    "a = a + c\n",
-    "\n",
-    "c = b[0] + b[1]\n",
-    "\n",
-    "print(a, c, sep=\"=\")"
+    "def tu_dien():\n",
+    "    for key in Dic:\n",
+    "        if key == input_word:\n",
+    "            return print(\"từ bạn nhập có nghĩa là: \", Dic[key])\n",
+    "    return print(\"từ bạn nhập không có trong từ điển\")\n",
+    "tu_dien()"
    ]
   },
   {
